Fixed content overflow

--- a/public/main.scss
+++ b/public/main.scss
@@ -23,7 +23,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   flex-flow: row nowrap;
@@ -48,7 +48,7 @@ nav {
 #content {
   .article {
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     box-shadow: 0 1px 5px var(--shadow-color);
     p {
@@ -72,7 +72,7 @@ nav {
 }
 
 footer {
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   text-align: center;
   padding: 5px 0;
